@@ -10,7 +10,6 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -48,7 +47,7 @@ public class FeedbacksController {
     @ApiResponses(value = {@ApiResponse(responseCode = "200", description = "Successfully found feedback(s)"), @ApiResponse(responseCode = "204", description = "Successful but no feedbacks found")})
     public ResponseEntity<FeedbacksResponse> getFeedbacksByCompanyAndEmail(@RequestParam("company") final String company, @RequestParam("emailAddress") final String emailAddress, @RequestParam("token") final String token) {
         //First of all, check if the company field and/or email address field are empty or null, then return bad request.
-        if (StringUtils.isBlank(company) || StringUtils.isBlank(emailAddress)) {
+        if (company == null || emailAddress == null || company.isBlank() || emailAddress.isBlank()) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
         //Check that the user has logged in, otherwise forbidden.
@@ -60,17 +59,14 @@ public class FeedbacksController {
         //Convert to FeedbackResponse object and return 200.
         FeedbackResponse[] feedbackResponses = new FeedbackResponse[feedbacks.size()];;
         for (int i = 0; i < feedbacks.size(); i++) {
-            feedbackResponses[i] = FeedbackResponse.builder()
-                    .id(feedbacks.get(i).getId().toString())
-                    .customerResponse(CustomerUtils.convertCustomerToCustomerResponse(feedbacks.get(i).getCustomer()))
-                    .extraInfos(feedbacks.get(i).getExtraInfos())
-                    .message(feedbacks.get(i).getMessage())
-                    .build();
+            FeedbackResponse feedbackResponse = new FeedbackResponse();
+            feedbackResponse.setId(feedbacks.get(i).getId().toString());
+            feedbackResponse.setCustomerResponse(CustomerUtils.convertCustomerToCustomerResponse(feedbacks.get(i).getCustomer()));
+            feedbackResponse.setExtraInfos(feedbacks.get(i).getExtraInfos());
+            feedbackResponse.setMessage(feedbacks.get(i).getMessage());
+            feedbackResponses[i] = feedbackResponse;
         }
-        return ResponseEntity.ok(FeedbacksResponse.builder()
-                .count((long) feedbackResponses.length)
-                .feedbackResponses(feedbackResponses)
-                .build());
+        return ResponseEntity.ok(new FeedbacksResponse((long) feedbackResponses.length, feedbackResponses));
     }
 
     /**
@@ -84,7 +80,7 @@ public class FeedbacksController {
     @ApiResponses(value = {@ApiResponse(responseCode = "200", description = "Successfully found feedback(s)"), @ApiResponse(responseCode = "204", description = "Successful but no feedbacks found")})
     public ResponseEntity<FeedbacksResponse> getFeedbacksByCompany(@RequestParam("company") final String company, @RequestParam("token") final String token) {
         //First of all, check if the company field is empty or null, then return bad request.
-        if (StringUtils.isBlank(company)) {
+        if (company == null || company.isBlank()) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
         //Check that the user has logged in, otherwise forbidden.
@@ -96,17 +92,14 @@ public class FeedbacksController {
         //Convert to FeedbackResponse object and return 200.
         FeedbackResponse[] feedbackResponses = new FeedbackResponse[feedbacks.size()];;
         for (int i = 0; i < feedbacks.size(); i++) {
-            feedbackResponses[i] = FeedbackResponse.builder()
-                    .id(feedbacks.get(i).getId().toString())
-                    .customerResponse(CustomerUtils.convertCustomerToCustomerResponse(feedbacks.get(i).getCustomer()))
-                    .extraInfos(feedbacks.get(i).getExtraInfos())
-                    .message(feedbacks.get(i).getMessage())
-                    .build();
+            FeedbackResponse feedbackResponse = new FeedbackResponse();
+            feedbackResponse.setId(feedbacks.get(i).getId().toString());
+            feedbackResponse.setCustomerResponse(CustomerUtils.convertCustomerToCustomerResponse(feedbacks.get(i).getCustomer()));
+            feedbackResponse.setExtraInfos(feedbacks.get(i).getExtraInfos());
+            feedbackResponse.setMessage(feedbacks.get(i).getMessage());
+            feedbackResponses[i] = feedbackResponse;
         }
-        return ResponseEntity.ok(FeedbacksResponse.builder()
-                .count((long) feedbackResponses.length)
-                .feedbackResponses(feedbackResponses)
-                .build());
+        return ResponseEntity.ok(new FeedbacksResponse((long) feedbackResponses.length, feedbackResponses));
     }
 
 }
