@@ -15,7 +15,6 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -57,7 +56,7 @@ public class StopTimesController {
     @GetMapping(value="/position")
     @ApiResponses(value = {@ApiResponse(responseCode = "200", description="Successfully got the position of vehicle"), @ApiResponse(responseCode="204",description="No vehicle found")})
     public ResponseEntity<PositionResponse> getPosition(final String company, final String allocatedTour, final String dateTime, final String difficultyLevel ) {
-        if ( StringUtils.isBlank(company) || StringUtils.isBlank(allocatedTour) || StringUtils.isBlank(dateTime)) {
+        if ( company.isBlank() || allocatedTour.isBlank() || dateTime.isBlank()) {
             return ResponseEntity.badRequest().build();
         }
         // Get the vehicle currently run - return no content if no vehicle is assigned.
@@ -69,18 +68,20 @@ public class StopTimesController {
         Position position = stopTimeService.retrievePositionForAllocatedTour(company, allocatedTour, DateUtils.convertDateToLocalDateTime(dateTime),
                 vehicles.getFirst().getDelayInMinutes());
         // Return the position.
-        return ResponseEntity.ok(PositionResponse.builder()
-                .stop(position.getStop())
-                .destination(position.getDestination())
-                .delay(position.getDelay())
-                .service(ServiceTripResponse.builder()
-                        .tempStartStopPos(position.getService().getTempStartStopPos())
-                        .tempEndStopPos(position.getService().getTempEndStopPos())
-                        .stopList(translateStopsToStringArray(position.getService().getStopList()))
-                        .outOfService(position.getService().isOutOfService())
-                        .scheduleId(position.getService().getRouteSchedule().getRouteNumberAndScheduleId())
-                        .serviceId(position.getService().getServiceId()).build())
-                .company(position.getCompany()).build());
+        PositionResponse positionResponse = new PositionResponse();
+        positionResponse.setStop(position.getStop());
+        positionResponse.setDestination(position.getDestination());
+        positionResponse.setDelay(position.getDelay());
+        ServiceTripResponse serviceTripResponse = new ServiceTripResponse();
+        serviceTripResponse.setTempStartStopPos(position.getService().getTempStartStopPos());
+        serviceTripResponse.setTempEndStopPos(position.getService().getTempEndStopPos());
+        serviceTripResponse.setStopList(translateStopsToStringArray(position.getService().getStopList()));
+        serviceTripResponse.setOutOfService(position.getService().isOutOfService());
+        serviceTripResponse.setScheduleId(position.getService().getRouteSchedule().getRouteNumberAndScheduleId());
+        serviceTripResponse.setServiceId(position.getService().getServiceId());
+        positionResponse.setService(serviceTripResponse);
+        positionResponse.setCompany(position.getCompany());
+        return ResponseEntity.ok(positionResponse);
     }
 
     /**
@@ -115,12 +116,12 @@ public class StopTimesController {
                                                            final String date, final String endDate, final boolean departures, final boolean arrivals,
                                                            final Optional<String> scheduleNumber) {
         //First of all, check that all necessary parameters were filled and that at least one of departures or arrivals is true.
-        if (StringUtils.isBlank(stopName) || StringUtils.isBlank(company) || StringUtils.isBlank(date)
+        if (stopName.isBlank() || company.isBlank() || date.isBlank()
                 || (!departures && !arrivals)) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
         //If end date is not empty or null, then set last date to the normal date to indicate no range otherwise end date.
-        LocalDate lastDate = StringUtils.isBlank(endDate) ? DateUtils.convertDateToLocalDate(date) : DateUtils.convertDateToLocalDate(endDate);
+        LocalDate lastDate = (endDate == null || endDate.isBlank()) ? DateUtils.convertDateToLocalDate(date) : DateUtils.convertDateToLocalDate(endDate);
         //Store the results of any service operations in a variable.
         List<StopTime> stopTimeList = new ArrayList<>();
         //Set the process date and start loop.
@@ -149,23 +150,21 @@ public class StopTimesController {
         //Now do the proessing into correct Response objects and return.
         StopTimeResponse[] stopTimeResponses = new StopTimeResponse[stopTimeList.size()];
         for ( int i = 0; i < stopTimeResponses.length; i++ ) {
-            stopTimeResponses[i] = StopTimeResponse.builder()
-                    .arrivalTime(DateUtils.convertLocalTimeToTime(stopTimeList.get(i).getArrivalTime()))
-                    .departureTime(DateUtils.convertLocalTimeToTime(stopTimeList.get(i).getDepartureTime()))
-                    .destination(stopTimeList.get(i).getDestination())
-                    .company(stopTimeList.get(i).getCompany())
-                    .journeyNumber(stopTimeList.get(i).getJourneyNumber())
-                    .operatingDays(StopTimeUtils.convertOperatingDaysToString(stopTimeList.get(i).getOperatingDays()))
-                    .routeNumber(stopTimeList.get(i).getRouteNumber())
-                    .scheduleNumber(Integer.parseInt(stopTimeList.get(i).getService().getRouteSchedule().getScheduleId()))
-                    .validFromDate(DateUtils.convertLocalDateTimeToDate(stopTimeList.get(i).getValidFromDate()))
-                    .validToDate(DateUtils.convertLocalDateTimeToDate(stopTimeList.get(i).getValidToDate()))
-                    .stopName(stopTimeList.get(i).getStopName())
-                    .build();
+            StopTimeResponse stopTimeResponse = new StopTimeResponse();
+            stopTimeResponse.setArrivalTime(DateUtils.convertLocalTimeToTime(stopTimeList.get(i).getArrivalTime()));
+            stopTimeResponse.setDepartureTime(DateUtils.convertLocalTimeToTime(stopTimeList.get(i).getDepartureTime()));
+            stopTimeResponse.setDestination(stopTimeList.get(i).getDestination());
+            stopTimeResponse.setCompany(stopTimeList.get(i).getCompany());
+            stopTimeResponse.setJourneyNumber(stopTimeList.get(i).getJourneyNumber());
+            stopTimeResponse.setOperatingDays(StopTimeUtils.convertOperatingDaysToString(stopTimeList.get(i).getOperatingDays()));
+            stopTimeResponse.setRouteNumber(stopTimeList.get(i).getRouteNumber());
+            stopTimeResponse.setScheduleNumber(Integer.parseInt(stopTimeList.get(i).getService().getRouteSchedule().getScheduleId()));
+            stopTimeResponse.setValidFromDate(DateUtils.convertLocalDateTimeToDate(stopTimeList.get(i).getValidFromDate()));
+            stopTimeResponse.setValidToDate(DateUtils.convertLocalDateTimeToDate(stopTimeList.get(i).getValidToDate()));
+            stopTimeResponse.setStopName(stopTimeList.get(i).getStopName());
+            stopTimeResponses[i] = stopTimeResponse;
         }
-        return ResponseEntity.ok(StopTimesResponse.builder()
-                .count((long) stopTimeResponses.length)
-                .stopTimeResponses(stopTimeResponses).build());
+        return ResponseEntity.ok(new StopTimesResponse((long) stopTimeResponses.length, stopTimeResponses));
     }
 
     /**
@@ -285,7 +284,7 @@ public class StopTimesController {
     @ApiResponses(value = {@ApiResponse(responseCode="200",description="Successfully deleted stop times")})
     public ResponseEntity<Void> deleteStopTimes (final String company, final Optional<String> routeNumber ) {
         //First of all, check if the company field is empty or null, then return bad request.
-        if (StringUtils.isBlank(company)) {
+        if (company.isBlank()) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
         //Delete all stop times for this company.
