@@ -10,7 +10,6 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -52,7 +51,7 @@ public class StopsController {
     @ApiResponses(value = {@ApiResponse(responseCode="200",description="Successfully returned stops")})
     public ResponseEntity<StopsResponse> getStops (final String company, final Optional<String> routeNumber ) {
         //First of all, check if the company field is empty or null, then return bad request.
-        if (StringUtils.isBlank(company)) {
+        if (company.isBlank()) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
 
@@ -65,18 +64,15 @@ public class StopsController {
         //Otherwise convert to stops response and return.
         StopResponse[] stopResponses = new StopResponse[stops.size()];
         for ( int i = 0; i < stopResponses.length; i++ ) {
-            stopResponses[i] = StopResponse.builder()
-                    .company(stops.get(i).getCompany())
-                    .latitude(stops.get(i).getLatitude())
-                    .longitude(stops.get(i).getLongitude())
-                    .waitingTime(stops.get(i).getWaitingTime())
-                    .distances(stops.get(i).getDistances())
-                    .name(stops.get(i).getName())
-                    .build();
+            stopResponses[i] = new StopResponse();
+            stopResponses[i].setCompany(stops.get(i).getCompany());
+            stopResponses[i].setLatitude(stops.get(i).getLatitude());
+            stopResponses[i].setLongitude(stops.get(i).getLongitude());
+            stopResponses[i].setWaitingTime(stops.get(i).getWaitingTime());
+            stopResponses[i].setDistances(stops.get(i).getDistances());
+            stopResponses[i].setName(stops.get(i).getName());
         }
-        return ResponseEntity.ok(StopsResponse.builder()
-                .count((long) stopResponses.length)
-                .stopResponses(stopResponses).build());
+        return ResponseEntity.ok(new StopsResponse((long) stopResponses.length, stopResponses));
     }
 
     /**
@@ -104,7 +100,7 @@ public class StopsController {
     @ApiResponses(value = {@ApiResponse(responseCode="200",description="Successfully deleted stops")})
     public ResponseEntity<Void> deleteStops (final String company ) {
         //First of all, check if the company field is empty or null, then return bad request.
-        if (StringUtils.isBlank(company)) {
+        if (company.isBlank()) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
         //Delete all stops for this company.
