@@ -10,9 +10,11 @@ import de.davelee.trams.server.response.VehicleHoursResponse;
 import de.davelee.trams.server.service.VehicleService;
 import org.assertj.core.util.Lists;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -30,6 +32,7 @@ import static org.mockito.ArgumentMatchers.*;
  * @author Dave Lee
  */
 @SpringBootTest
+@ExtendWith(MockitoExtension.class)
 public class VehicleControllerTest {
 
     @InjectMocks
@@ -47,45 +50,45 @@ public class VehicleControllerTest {
         Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber(eq("Lee Transport"), any())).thenReturn(null);
         Mockito.when(vehicleService.addVehicle(any())).thenReturn(true);
         //Purchase valid bus
-        ResponseEntity<PurchaseVehicleResponse> responseEntity = vehicleController.purchaseVehicle(PurchaseVehicleRequest.builder()
-                        .additionalTypeInformationMap(Map.of("registrationNumber", "XXX2 BBB"))
-                        .modelName("Bendy Bus 2000")
-                        .vehicleType("BUS")
-                        .seatingCapacity(50)
-                        .standingCapacity(100)
-                        .company("Lee Transport")
-                        .livery("Green with red text")
-                        .fleetNumber("213")
-                        .build());
-        assertEquals(200, responseEntity.getStatusCodeValue());
+        PurchaseVehicleRequest purchaseVehicleRequest = new PurchaseVehicleRequest();
+        purchaseVehicleRequest.setAdditionalTypeInformationMap(Map.of("registrationNumber", "XXX2 BBB"));
+        purchaseVehicleRequest.setModelName("Bendy Bus 2000");
+        purchaseVehicleRequest.setVehicleType("BUS");
+        purchaseVehicleRequest.setSeatingCapacity(50);
+        purchaseVehicleRequest.setStandingCapacity(100);
+        purchaseVehicleRequest.setCompany("Lee Transport");
+        purchaseVehicleRequest.setLivery("Green with red text");
+        purchaseVehicleRequest.setFleetNumber("213");
+        ResponseEntity<PurchaseVehicleResponse> responseEntity = vehicleController.purchaseVehicle(purchaseVehicleRequest);
+        assertEquals(200, responseEntity.getStatusCode().value());
         assertTrue(responseEntity.getBody().isPurchased());
         assertEquals(200000, responseEntity.getBody().getPurchasePrice());
         //Purchase valid train
-        ResponseEntity<PurchaseVehicleResponse> responseEntity2 = vehicleController.purchaseVehicle(PurchaseVehicleRequest.builder()
-                .additionalTypeInformationMap(Map.of("Operating Mode", "Electric"))
-                .modelName("Elec Train 2000")
-                .vehicleType("TRAIN")
-                .seatingCapacity(130)
-                .standingCapacity(200)
-                .company("Lee Transport")
-                .livery("Green with red text")
-                .fleetNumber("2300")
-                .build());
-        assertEquals(200, responseEntity2.getStatusCodeValue());
+        PurchaseVehicleRequest purchaseVehicleRequestTrain = new PurchaseVehicleRequest();
+        purchaseVehicleRequestTrain.setAdditionalTypeInformationMap(Map.of("Operating Mode", "Electric"));
+        purchaseVehicleRequestTrain.setModelName("Elec Train 2000");
+        purchaseVehicleRequestTrain.setVehicleType("TRAIN");
+        purchaseVehicleRequestTrain.setSeatingCapacity(130);
+        purchaseVehicleRequestTrain.setStandingCapacity(200);
+        purchaseVehicleRequestTrain.setCompany("Lee Transport");
+        purchaseVehicleRequestTrain.setLivery("Green with red text");
+        purchaseVehicleRequestTrain.setFleetNumber("2300");
+        ResponseEntity<PurchaseVehicleResponse> responseEntity2 = vehicleController.purchaseVehicle(purchaseVehicleRequestTrain);
+        assertEquals(200, responseEntity2.getStatusCode().value());
         assertTrue(responseEntity2.getBody().isPurchased());
         assertEquals(1000000, responseEntity2.getBody().getPurchasePrice());
         //Purchase valid tram
-        PurchaseVehicleRequest purchaseVehicleRequest = new PurchaseVehicleRequest();
-        purchaseVehicleRequest.setAdditionalTypeInformationMap(Map.of("Operating Mode", "Electric"));
-        purchaseVehicleRequest.setModelName("Elec Tram 2000");
-        purchaseVehicleRequest.setVehicleType("TRAM");
-        purchaseVehicleRequest.setSeatingCapacity(50);
-        purchaseVehicleRequest.setStandingCapacity(130);
-        purchaseVehicleRequest.setCompany("Lee Transport");
-        purchaseVehicleRequest.setLivery("Green with red text");
-        purchaseVehicleRequest.setFleetNumber("3300");
-        ResponseEntity<PurchaseVehicleResponse> responseEntity3 = vehicleController.purchaseVehicle(purchaseVehicleRequest);
-        assertEquals(200, responseEntity3.getStatusCodeValue());
+        PurchaseVehicleRequest purchaseVehicleRequestTram = new PurchaseVehicleRequest();
+        purchaseVehicleRequestTram.setAdditionalTypeInformationMap(Map.of("Operating Mode", "Electric"));
+        purchaseVehicleRequestTram.setModelName("Elec Tram 2000");
+        purchaseVehicleRequestTram.setVehicleType("TRAM");
+        purchaseVehicleRequestTram.setSeatingCapacity(50);
+        purchaseVehicleRequestTram.setStandingCapacity(130);
+        purchaseVehicleRequestTram.setCompany("Lee Transport");
+        purchaseVehicleRequestTram.setLivery("Green with red text");
+        purchaseVehicleRequestTram.setFleetNumber("3300");
+        ResponseEntity<PurchaseVehicleResponse> responseEntity3 = vehicleController.purchaseVehicle(purchaseVehicleRequestTram);
+        assertEquals(200, responseEntity3.getStatusCode().value());
         assertTrue(responseEntity3.getBody().isPurchased());
         assertEquals(700000, responseEntity3.getBody().getPurchasePrice());
     }
@@ -96,53 +99,45 @@ public class VehicleControllerTest {
     @Test
     public void testInvalidPurchaseVehicle() {
         //Mock important methods
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "213")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("213")
-                .allocatedTour("1/1")
-                .vehicleType(VehicleType.BUS)
-                .typeSpecificInfos(Collections.singletonMap("registrationNumber", "XXX2 BBB"))
-                .company("Lee Buses")
-                .deliveryDate(LocalDateTime.of(2021,3,25,0,0))
-                .inspectionDate(LocalDateTime.of(2021,4,25,0,0))
-                .build()));
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "214")).thenReturn(null);
+        Vehicle vehicle = new Vehicle();
+        vehicle.setLivery("Green with red text");
+        vehicle.setFleetNumber("213");
+        vehicle.setAllocatedTour("1/1");
+        vehicle.setVehicleType(VehicleType.BUS);
+        vehicle.setTypeSpecificInfos(Collections.singletonMap("registrationNumber", "XXX2 BBB"));
+        vehicle.setCompany("Lee Buses");
+        vehicle.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "213")).thenReturn(Lists.newArrayList(vehicle));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "214")).thenReturn(null);
         Mockito.when(vehicleService.addVehicle(any())).thenReturn(false);
         //Purchase bus with missing company.
-        ResponseEntity<PurchaseVehicleResponse> responseEntity = vehicleController.purchaseVehicle(PurchaseVehicleRequest.builder()
-                .additionalTypeInformationMap(Map.of("registrationNumber", "XXX2 BBB"))
-                .modelName("Bendy Bus 2000")
-                .vehicleType("BUS")
-                .seatingCapacity(50)
-                .standingCapacity(100)
-                .livery("Green with red text")
-                .fleetNumber("213")
-                .build());
-        assertEquals(400, responseEntity.getStatusCodeValue());
+        PurchaseVehicleRequest purchaseVehicleRequest = new PurchaseVehicleRequest();
+        purchaseVehicleRequest.setAdditionalTypeInformationMap(Map.of("registrationNumber", "XXX2 BBB"));
+        purchaseVehicleRequest.setModelName("Bendy Bus 2000");
+        purchaseVehicleRequest.setVehicleType("BUS");
+        purchaseVehicleRequest.setSeatingCapacity(50);
+        purchaseVehicleRequest.setStandingCapacity(100);
+        purchaseVehicleRequest.setCompany("Lee Transport");
+        purchaseVehicleRequest.setLivery("Green with red text");
+        purchaseVehicleRequest.setFleetNumber("213");
+        ResponseEntity<PurchaseVehicleResponse> responseEntity = vehicleController.purchaseVehicle(purchaseVehicleRequest);
+        assertEquals(409, responseEntity.getStatusCode().value());
         //Purchase bus which already exists.
-        ResponseEntity<PurchaseVehicleResponse> responseEntity2 = vehicleController.purchaseVehicle(PurchaseVehicleRequest.builder()
-                .additionalTypeInformationMap(Map.of("registrationNumber", "XXX2 BBB"))
-                .modelName("Bendy Bus 2000")
-                .vehicleType("BUS")
-                .seatingCapacity(50)
-                .standingCapacity(100)
-                .livery("Green with red text")
-                .company("Lee Buses")
-                .fleetNumber("213")
-                .build());
-        assertEquals(409, responseEntity2.getStatusCodeValue());
+        ResponseEntity<PurchaseVehicleResponse> responseEntity2 = vehicleController.purchaseVehicle(purchaseVehicleRequest);
+        assertEquals(409, responseEntity2.getStatusCode().value());
         //Purchase bus which does not exist but does not validate and cannot be added to the database.
-        ResponseEntity<PurchaseVehicleResponse> responseEntity3 = vehicleController.purchaseVehicle(PurchaseVehicleRequest.builder()
-                .additionalTypeInformationMap(Map.of("registrationNumber", "XXX2 BBB"))
-                .modelName("Bendy Bus 2000")
-                .vehicleType("BUS")
-                .seatingCapacity(50)
-                .standingCapacity(100)
-                .livery("Green with red text")
-                .company("Lee Buses")
-                .fleetNumber("214")
-                .build());
-        assertEquals(500, responseEntity3.getStatusCodeValue());
+        PurchaseVehicleRequest purchaseVehicleRequest2 = new PurchaseVehicleRequest();
+        purchaseVehicleRequest2.setAdditionalTypeInformationMap(Map.of("registrationNumber", "XXX2 BBB"));
+        purchaseVehicleRequest2.setModelName("Bendy Bus 2000");
+        purchaseVehicleRequest2.setVehicleType("BUS");
+        purchaseVehicleRequest2.setSeatingCapacity(50);
+        purchaseVehicleRequest2.setStandingCapacity(100);
+        purchaseVehicleRequest2.setCompany("Lee Transport");
+        purchaseVehicleRequest2.setLivery("Green with red text");
+        purchaseVehicleRequest2.setFleetNumber("214");
+        ResponseEntity<PurchaseVehicleResponse> responseEntity3 = vehicleController.purchaseVehicle(purchaseVehicleRequest2);
+        assertEquals(500, responseEntity3.getStatusCode().value());
     }
 
     /**
@@ -150,53 +145,51 @@ public class VehicleControllerTest {
      */
     @Test
     public void testAddHoursForDate() {
+        Vehicle vehicle = new Vehicle();
+        vehicle.setLivery("Green with red text");
+        vehicle.setFleetNumber("213");
+        vehicle.setAllocatedTour("1/1");
+        vehicle.setVehicleType(VehicleType.BUS);
+        vehicle.setTypeSpecificInfos(Collections.singletonMap("registrationNumber", "XXX2 BBB"));
+        vehicle.setCompany("Lee Buses");
+        vehicle.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
         //Mock important methods in the vehicle service.
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "213")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("213")
-                .allocatedTour("1/1")
-                .vehicleType(VehicleType.BUS)
-                .typeSpecificInfos(Collections.singletonMap("registrationNumber", "XXX2 BBB"))
-                .company("Lee Buses")
-                .deliveryDate(LocalDateTime.of(2021,3,25,0,0))
-                .inspectionDate(LocalDateTime.of(2021,4,25,0,0))
-                .build()));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "213")).thenReturn(Lists.newArrayList(vehicle));
         Mockito.when(vehicleService.addHoursForDate(any(), eq(14), any() )).thenReturn(true);
         //Do test with a valid request.
-        ResponseEntity<Void> responseEntity = vehicleController.addHoursForDate(
-                AddVehicleHoursRequest.builder()
-                        .date("21-10-2021")
-                        .hours(14)
-                        .company("Lee Buses")
-                        .fleetNumber("213")
-                        .build());
+        AddVehicleHoursRequest addVehicleHoursRequest = new AddVehicleHoursRequest();
+        addVehicleHoursRequest.setDate("21-10-2021");
+        addVehicleHoursRequest.setHours(14);
+        addVehicleHoursRequest.setCompany("Lee Buses");
+        addVehicleHoursRequest.setFleetNumber("213");
+        ResponseEntity<Void> responseEntity = vehicleController.addHoursForDate(addVehicleHoursRequest);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
         //Do test with a bad request.
+        AddVehicleHoursRequest addVehicleHoursRequest2 = new AddVehicleHoursRequest();
+        addVehicleHoursRequest2.setDate("");
+        addVehicleHoursRequest2.setHours(-1);
+        addVehicleHoursRequest2.setCompany("Lee Buses");
+        addVehicleHoursRequest2.setFleetNumber("213");
         ResponseEntity<Void> responseEntity2 = vehicleController.addHoursForDate(
-                AddVehicleHoursRequest.builder()
-                        .date("")
-                        .hours(-1)
-                        .company("Lee Buses")
-                        .fleetNumber("213")
-                        .build());
+                addVehicleHoursRequest2);
         assertEquals(HttpStatus.BAD_REQUEST, responseEntity2.getStatusCode());
         //Do test with 0 results from db.
         Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "212")).thenReturn(Lists.newArrayList());
+        AddVehicleHoursRequest addVehicleHoursRequest3 = new AddVehicleHoursRequest();
+        addVehicleHoursRequest3.setDate("21-10-2021");
+        addVehicleHoursRequest3.setHours(14);
+        addVehicleHoursRequest3.setCompany("Lee Buses");
+        addVehicleHoursRequest3.setFleetNumber("212");
         ResponseEntity<Void> responseEntity3 = vehicleController.addHoursForDate(
-                AddVehicleHoursRequest.builder()
-                        .date("21-10-2021")
-                        .hours(14)
-                        .company("Lee Buses")
-                        .fleetNumber("212")
-                        .build());
+                addVehicleHoursRequest3);
         assertEquals(HttpStatus.NO_CONTENT, responseEntity3.getStatusCode());
-        ResponseEntity<Void> responseEntity4 = vehicleController.addHoursForDate(
-                AddVehicleHoursRequest.builder()
-                        .date("210-10-2021")
-                        .hours(14)
-                        .company("Lee Buses")
-                        .fleetNumber("213")
-                        .build());
+        AddVehicleHoursRequest addVehicleHoursRequest4 = new AddVehicleHoursRequest();
+        addVehicleHoursRequest4.setDate("210-10-2021");
+        addVehicleHoursRequest4.setHours(14);
+        addVehicleHoursRequest4.setCompany("Lee Buses");
+        addVehicleHoursRequest4.setFleetNumber("213");
+        ResponseEntity<Void> responseEntity4 = vehicleController.addHoursForDate(addVehicleHoursRequest4);
         assertEquals(HttpStatus.NO_CONTENT, responseEntity3.getStatusCode());
     }
 
@@ -205,40 +198,40 @@ public class VehicleControllerTest {
      */
     @Test
     public void testGetHoursForDate() {
+        Vehicle vehicle = new Vehicle();
+        vehicle.setLivery("Green with red text");
+        vehicle.setFleetNumber("213");
+        vehicle.setAllocatedTour("1/1");
+        vehicle.setVehicleType(VehicleType.BUS);
+        vehicle.setTypeSpecificInfos(Collections.singletonMap("registrationNumber", "XXX2 BBB"));
+        vehicle.setCompany("Lee Buses");
+        vehicle.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        vehicle.setTimesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14));
+        Vehicle vehicle2 = new Vehicle();
+        vehicle2.setLivery("Green with red text");
+        vehicle2.setFleetNumber("214");
+        vehicle2.setAllocatedTour("1/1");
+        vehicle2.setVehicleType(VehicleType.TRAM);
+        vehicle2.setTypeSpecificInfos(Collections.singletonMap("Bidirectional", "true"));
+        vehicle2.setCompany("Lee Buses");
+        vehicle2.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle2.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        vehicle2.setTimesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14));
+        Vehicle vehicle3 = new Vehicle();
+        vehicle3.setLivery("Green with red text");
+        vehicle3.setFleetNumber("215");
+        vehicle3.setAllocatedTour("1/1");
+        vehicle3.setVehicleType(VehicleType.TRAIN);
+        vehicle3.setTypeSpecificInfos(Collections.singletonMap("Power Mode", "Electric"));
+        vehicle3.setCompany("Lee Buses");
+        vehicle3.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle3.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        vehicle3.setTimesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14));
         //Mock important methods in the vehicle service.
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "213")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("213")
-                .allocatedTour("1/1")
-                .vehicleType(VehicleType.BUS)
-                .typeSpecificInfos(Collections.singletonMap("registrationNumber", "XXX2 BBB"))
-                .company("Lee Buses")
-                .deliveryDate(LocalDateTime.of(2021,3,25,0,0))
-                .inspectionDate(LocalDateTime.of(2021,4,25,0,0))
-                .timesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14))
-                .build()));
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "214")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("214")
-                .allocatedTour("1/1")
-                .vehicleType(VehicleType.TRAM)
-                .typeSpecificInfos(Collections.singletonMap("Bidirectional", "true"))
-                .company("Lee Buses")
-                .deliveryDate(LocalDateTime.of(2021,3,25,0,0))
-                .inspectionDate(LocalDateTime.of(2021,4,25,0,0))
-                .timesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14))
-                .build()));
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "215")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("215")
-                .allocatedTour("1/1")
-                .vehicleType(VehicleType.TRAIN)
-                .typeSpecificInfos(Collections.singletonMap("Power Mode", "Electric"))
-                .company("Lee Buses")
-                .deliveryDate(LocalDateTime.of(2021,3,25,0,0))
-                .inspectionDate(LocalDateTime.of(2021,4,25,0,0))
-                .timesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14))
-                .build()));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "213")).thenReturn(Lists.newArrayList(vehicle));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "214")).thenReturn(Lists.newArrayList(vehicle2));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "215")).thenReturn(Lists.newArrayList(vehicle3));
         //Do test with a valid request for each vehicle Type.
         ResponseEntity<VehicleHoursResponse> responseEntity = vehicleController.getHoursForDate("Lee Buses", "213", "21-10-2021 00:00");
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
@@ -276,49 +269,45 @@ public class VehicleControllerTest {
      */
     @Test
     public void testAddHistoryEntry() {
+        Vehicle vehicle = new Vehicle();
+        vehicle.setLivery("Green with red text");
+        vehicle.setFleetNumber("213");
+        vehicle.setAllocatedTour("1/1");
+        vehicle.setVehicleType(VehicleType.BUS);
+        vehicle.setTypeSpecificInfos(Collections.singletonMap("registrationNumber", "XXX2 BBB"));
+        vehicle.setCompany("Lee Buses");
+        vehicle.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        vehicle.setTimesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14));
         //Mock the important methods in vehicle service.
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "213")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("213")
-                .allocatedTour("1/1")
-                .vehicleType(VehicleType.BUS)
-                .typeSpecificInfos(Collections.singletonMap("registrationNumber", "XXX2 BBB"))
-                .company("Lee Buses")
-                .deliveryDate(LocalDateTime.of(2021,3,25,0,0))
-                .inspectionDate(LocalDateTime.of(2021,4,25,0,0))
-                .timesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14))
-                .build()));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "213")).thenReturn(Lists.newArrayList(vehicle));
         Mockito.when(vehicleService.addVehicleHistoryEntry(any(), any(), any(), anyString())).thenReturn(true);
         //Perform tests - valid request
-        AddHistoryEntryRequest addHistoryEntryRequest = AddHistoryEntryRequest.builder()
-                .fleetNumber("213")
-                .company("Lee Buses")
-                .date("01-03-2020")
-                .reason("PURCHASED")
-                .comment("Welcome to the company!")
-                .build();
+        AddHistoryEntryRequest addHistoryEntryRequest = new AddHistoryEntryRequest();
+        addHistoryEntryRequest.setFleetNumber("213");
+        addHistoryEntryRequest.setCompany("Lee Buses");
+        addHistoryEntryRequest.setDate("01-03-2020");
+        addHistoryEntryRequest.setReason("PURCHASED");
+        addHistoryEntryRequest.setComment("Welcome to the company!");
         ResponseEntity<Void> responseEntity = vehicleController.addHistoryEntry(addHistoryEntryRequest);
-        assertTrue(responseEntity.getStatusCodeValue() == HttpStatus.OK.value());
+        assertTrue(responseEntity.getStatusCode().value() == HttpStatus.OK.value());
         //Perform tests - fleet number missing
-        AddHistoryEntryRequest addHistoryEntryRequest2 = AddHistoryEntryRequest.builder()
-                .fleetNumber("")
-                .company("Example Company")
-                .date("01-03-2020")
-                .reason("JOINED")
-                .comment("Welcome to the company!")
-                .build();
+        AddHistoryEntryRequest addHistoryEntryRequest2 = new AddHistoryEntryRequest();
+        addHistoryEntryRequest2.setCompany("Lee Buses");
+        addHistoryEntryRequest2.setDate("01-03-2020");
+        addHistoryEntryRequest2.setReason("JOINED");
+        addHistoryEntryRequest2.setComment("Welcome to the company!");
         ResponseEntity<Void> responseEntity2 = vehicleController.addHistoryEntry(addHistoryEntryRequest2);
-        assertTrue(responseEntity2.getStatusCodeValue() == HttpStatus.BAD_REQUEST.value());
+        assertTrue(responseEntity2.getStatusCode().value() == HttpStatus.BAD_REQUEST.value());
         //Perform tests - no vehicle
-        AddHistoryEntryRequest addHistoryEntryRequest3 = AddHistoryEntryRequest.builder()
-                .fleetNumber("210")
-                .company("Example Company")
-                .date("01-03-2020")
-                .reason("JOINED")
-                .comment("Welcome to the company!")
-                .build();
+        AddHistoryEntryRequest addHistoryEntryRequest3 = new AddHistoryEntryRequest();
+        addHistoryEntryRequest3.setFleetNumber("210");
+        addHistoryEntryRequest3.setCompany("Example Company");
+        addHistoryEntryRequest3.setDate("01-03-2020");
+        addHistoryEntryRequest3.setReason("JOINED");
+        addHistoryEntryRequest3.setComment("Welcome to the company!");
         ResponseEntity<Void> responseEntity3 = vehicleController.addHistoryEntry(addHistoryEntryRequest3);
-        assertTrue(responseEntity3.getStatusCodeValue() == HttpStatus.NO_CONTENT.value());
+        assertTrue(responseEntity3.getStatusCode().value() == HttpStatus.NO_CONTENT.value());
     }
 
     /**
@@ -327,24 +316,21 @@ public class VehicleControllerTest {
      */
     @Test
     public void testSellVehicle() {
+        Vehicle vehicle = new Vehicle();
+        vehicle.setLivery("Green with red text");
+        vehicle.setFleetNumber("213");
+        vehicle.setAllocatedTour("1/1");
+        vehicle.setVehicleType(VehicleType.BUS);
+        vehicle.setTypeSpecificInfos(Collections.singletonMap("registrationNumber", "XXX2 BBB"));
+        vehicle.setCompany("Lee Buses");
+        vehicle.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        vehicle.setTimesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14));
         //Mock the important methods in vehicle service.
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "213")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("213")
-                .allocatedTour("1/1")
-                .vehicleType(VehicleType.BUS)
-                .typeSpecificInfos(Collections.singletonMap("registrationNumber", "XXX2 BBB"))
-                .company("Lee Buses")
-                .deliveryDate(LocalDateTime.of(2021,3,25,0,0))
-                .inspectionDate(LocalDateTime.of(2021,4,25,0,0))
-                .timesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14))
-                .build()));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Buses", "213")).thenReturn(Lists.newArrayList(vehicle));
         Mockito.when(vehicleService.sellVehicle(any())).thenReturn(VehicleType.BUS.getPurchasePrice());
         //Perform the test.
-        ResponseEntity<SellVehicleResponse> responseEntity = vehicleController.sellVehicle(SellVehicleRequest.builder()
-                .company("Lee Buses")
-                .fleetNumber("213")
-                .build());
+        ResponseEntity<SellVehicleResponse> responseEntity = vehicleController.sellVehicle(new SellVehicleRequest("213", "Lee Buses"));
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
         assertTrue(responseEntity.getBody().isSold());
         assertEquals(VehicleType.BUS.getPurchasePrice().doubleValue(), responseEntity.getBody().getSoldPrice());
@@ -365,24 +351,21 @@ public class VehicleControllerTest {
      */
     @Test
     public void testInspectVehicle() {
+        Vehicle vehicle3 = new Vehicle();
+        vehicle3.setLivery("Green with red text");
+        vehicle3.setFleetNumber("223");
+        vehicle3.setAllocatedTour("1/1");
+        vehicle3.setVehicleType(VehicleType.TRAIN);
+        vehicle3.setTypeSpecificInfos(Collections.singletonMap("Operational Mode", "Electric"));
+        vehicle3.setCompany("Lee Transport");
+        vehicle3.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle3.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        vehicle3.setTimesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14));
         //Mock the important methods in vehicle service.
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "223")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("223")
-                .allocatedTour("1/1")
-                .vehicleType(VehicleType.TRAIN)
-                .typeSpecificInfos(Collections.singletonMap("Operational Mode", "Electric"))
-                .company("Lee Transport")
-                .deliveryDate(LocalDateTime.of(2021, 3, 25,0,0))
-                .inspectionDate(LocalDateTime.of(2021, 4, 25,0,0))
-                .timesheet(Map.of(LocalDateTime.of(2021, 10, 21,0,0), 14))
-                .build()));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "223")).thenReturn(Lists.newArrayList(vehicle3));
         Mockito.when(vehicleService.inspectVehicle(any())).thenReturn(VehicleType.TRAIN.getInspectionPrice());
         //Perform the test.
-        ResponseEntity<InspectVehicleResponse> responseEntity = vehicleController.inspectVehicle(InspectVehicleRequest.builder()
-                .company("Lee Transport")
-                .fleetNumber("223")
-                .build());
+        ResponseEntity<InspectVehicleResponse> responseEntity = vehicleController.inspectVehicle(new InspectVehicleRequest("223", "Lee Transport"));
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
         assertTrue(responseEntity.getBody().isInspected());
         assertEquals(VehicleType.TRAIN.getInspectionPrice().doubleValue(), responseEntity.getBody().getInspectionPrice());
@@ -396,23 +379,20 @@ public class VehicleControllerTest {
         ResponseEntity<InspectVehicleResponse> responseEntity3 = vehicleController.inspectVehicle(inspectVehicleRequest);
         assertEquals(HttpStatus.NO_CONTENT, responseEntity3.getStatusCode());
         //Perform a further test with bus to ensure full test coverage.
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "233")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("233")
-                .allocatedTour("1/1")
-                .vehicleType(VehicleType.BUS)
-                .typeSpecificInfos(Collections.singletonMap("registrationNumber", "HFJK23D"))
-                .company("Lee Transport")
-                .deliveryDate(LocalDateTime.of(2021, 3, 25,0,0))
-                .inspectionDate(LocalDateTime.of(2021, 4, 25,0,0))
-                .timesheet(Map.of(LocalDateTime.of(2021, 10, 21,0,0), 14))
-                .build()));
+        Vehicle vehicle4 = new Vehicle();
+        vehicle4.setLivery("Green with red text");
+        vehicle4.setFleetNumber("233");
+        vehicle4.setAllocatedTour("1/1");
+        vehicle4.setVehicleType(VehicleType.BUS);
+        vehicle4.setTypeSpecificInfos(Collections.singletonMap("registrationNumber", "HFJK23D"));
+        vehicle4.setCompany("Lee Transport");
+        vehicle4.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle4.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        vehicle4.setTimesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "233")).thenReturn(Lists.newArrayList(vehicle4));
         Mockito.when(vehicleService.inspectVehicle(any())).thenReturn(VehicleType.BUS.getInspectionPrice());
         //Perform the test.
-        ResponseEntity<InspectVehicleResponse> responseEntity4 = vehicleController.inspectVehicle(InspectVehicleRequest.builder()
-                .company("Lee Transport")
-                .fleetNumber("233")
-                .build());
+        ResponseEntity<InspectVehicleResponse> responseEntity4 = vehicleController.inspectVehicle(new InspectVehicleRequest("233", "Lee Transport"));
         assertEquals(HttpStatus.OK, responseEntity4.getStatusCode());
         assertTrue(responseEntity4.getBody().isInspected());
         assertEquals(VehicleType.BUS.getInspectionPrice().doubleValue(), responseEntity4.getBody().getInspectionPrice());
@@ -424,30 +404,24 @@ public class VehicleControllerTest {
      */
     @Test
     public void testAllocations() {
+        Vehicle vehicle3 = new Vehicle();
+        vehicle3.setLivery("Green with red text");
+        vehicle3.setFleetNumber("223");
+        vehicle3.setAllocatedTour("1/1");
+        vehicle3.setVehicleType(VehicleType.TRAIN);
+        vehicle3.setTypeSpecificInfos(Collections.singletonMap("Operational Mode", "Electric"));
+        vehicle3.setCompany("Lee Transport");
+        vehicle3.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle3.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        vehicle3.setTimesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14));
         //Mock the important methods in vehicle service.
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "223")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("223")
-                .vehicleType(VehicleType.TRAIN)
-                .typeSpecificInfos(Collections.singletonMap("Operational Mode", "Electric"))
-                .company("Lee Transport")
-                .deliveryDate(LocalDateTime.of(2021, 3, 25,0,0))
-                .inspectionDate(LocalDateTime.of(2021, 4, 25,0,0))
-                .timesheet(Map.of(LocalDateTime.of(2021, 10, 21,0,0), 14))
-                .build()));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "223")).thenReturn(Lists.newArrayList(vehicle3));
         Mockito.when(vehicleService.allocateTourToVehicle(any(), any(), any())).thenReturn(true);
         //Perform the actual test.
-        ResponseEntity responseEntity = vehicleController.allocateVehicle(AllocateVehicleRequest.builder()
-                .company("Lee Transport")
-                .fleetNumber("223")
-                .allocatedTour("1/1")
-                .build());
+        ResponseEntity responseEntity = vehicleController.allocateVehicle(new AllocateVehicleRequest("223", "Lee Transport", "1", "1"));
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
         //Remove fleet number.
-        ResponseEntity responseEntity2 = vehicleController.allocateVehicle(AllocateVehicleRequest.builder()
-                .company("Lee Transport")
-                .allocatedTour("1/1")
-                .build());
+        ResponseEntity responseEntity2 = vehicleController.allocateVehicle(new AllocateVehicleRequest("", "Lee Transport", "1", "1"));
         assertEquals(HttpStatus.BAD_REQUEST, responseEntity2.getStatusCode());
         //Test with vehicle that does not exist
         AllocateVehicleRequest allocateVehicleRequest = new AllocateVehicleRequest();
@@ -470,18 +444,18 @@ public class VehicleControllerTest {
      */
     @Test
     public void testRetrieveAllocations() {
+        Vehicle vehicle3 = new Vehicle();
+        vehicle3.setLivery("Green with red text");
+        vehicle3.setFleetNumber("223");
+        vehicle3.setAllocatedTour("1/2");
+        vehicle3.setVehicleType(VehicleType.TRAIN);
+        vehicle3.setTypeSpecificInfos(Collections.singletonMap("Operational Mode", "Electric"));
+        vehicle3.setCompany("Lee Transport");
+        vehicle3.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle3.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        vehicle3.setTimesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14));
         //Mock the important methods in vehicle service.
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndAllocatedRouteAndAllocatedTour("Lee Transport", "1", "2")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("223")
-                .vehicleType(VehicleType.TRAIN)
-                .typeSpecificInfos(Collections.singletonMap("Operational Mode", "Electric"))
-                .company("Lee Transport")
-                .allocatedTour("1/2")
-                .deliveryDate(LocalDateTime.of(2021, 3, 25,0,0))
-                .inspectionDate(LocalDateTime.of(2021,4,25,0,0))
-                .timesheet(Map.of(LocalDateTime.of(2021, 10, 21,0,0), 14))
-                .build()));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndAllocatedRouteAndAllocatedTour("Lee Transport", "1", "2")).thenReturn(Lists.newArrayList(vehicle3));
         //Attempt to retrieve the vehicle.
         assertEquals(HttpStatus.OK, vehicleController.getAllocatedVehicle("Lee Transport", "1", "2").getStatusCode());
         assertEquals(HttpStatus.NO_CONTENT, vehicleController.getAllocatedVehicle("Lee Transport", "1", "1").getStatusCode());
@@ -494,21 +468,21 @@ public class VehicleControllerTest {
      */
     @Test
     public void testDelayVehicle() {
+        Vehicle vehicle3 = new Vehicle();
+        vehicle3.setLivery("Green with red text");
+        vehicle3.setFleetNumber("223");
+        vehicle3.setAllocatedTour("1/1");
+        vehicle3.setVehicleType(VehicleType.TRAIN);
+        vehicle3.setTypeSpecificInfos(Collections.singletonMap("Operational Mode", "Electric"));
+        vehicle3.setCompany("Lee Transport");
+        vehicle3.setDelayInMinutes(5);
+        vehicle3.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle3.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        vehicle3.setTimesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14));
         //Mock the important methods in vehicle service.
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "223")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("223")
-                .vehicleType(VehicleType.TRAIN)
-                .typeSpecificInfos(Collections.singletonMap("Operational Mode", "Electric"))
-                .company("Lee Transport")
-                .allocatedTour("1/2")
-                .delayInMinutes(5)
-                .deliveryDate(LocalDateTime.of(2021, 3, 25,0,0))
-                .inspectionDate(LocalDateTime.of(2021, 4, 25,0,0))
-                .timesheet(Map.of(LocalDateTime.of(2021, 10, 21,0,0), 14))
-                .build()));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("223", "Lee Transport")).thenReturn(Lists.newArrayList(vehicle3));
         //Attempt to adjust delay.
-        assertEquals(HttpStatus.OK, vehicleController.adjustVehicleDelay(AdjustVehicleDelayRequest.builder().delayInMinutes(-3).company("Lee Transport").fleetNumber("223").build()).getStatusCode());
+        assertEquals(HttpStatus.OK, vehicleController.adjustVehicleDelay(new AdjustVehicleDelayRequest("223", "Lee Transport", -3)).getStatusCode());
         AdjustVehicleDelayRequest adjustVehicleDelayRequest = new AdjustVehicleDelayRequest();
         adjustVehicleDelayRequest.setDelayInMinutes(4);
         adjustVehicleDelayRequest.setCompany("Lee Transport");
@@ -524,19 +498,19 @@ public class VehicleControllerTest {
      */
     @Test
     public void testVehicleValue() {
+        Vehicle vehicle3 = new Vehicle();
+        vehicle3.setLivery("Green with red text");
+        vehicle3.setFleetNumber("223");
+        vehicle3.setAllocatedTour("1/2");
+        vehicle3.setVehicleType(VehicleType.TRAIN);
+        vehicle3.setTypeSpecificInfos(Collections.singletonMap("Operational Mode", "Electric"));
+        vehicle3.setCompany("Lee Transport");
+        vehicle3.setDelayInMinutes(5);
+        vehicle3.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle3.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        vehicle3.setTimesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14));
         //Mock the important methods in vehicle service.
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "223")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("223")
-                .vehicleType(VehicleType.TRAIN)
-                .typeSpecificInfos(Collections.singletonMap("Operational Mode", "Electric"))
-                .company("Lee Transport")
-                .allocatedTour("1/2")
-                .delayInMinutes(5)
-                .deliveryDate(LocalDateTime.of(2021, 3, 25,0,0))
-                .inspectionDate(LocalDateTime.of(2021, 4, 25,0,0))
-                .timesheet(Map.of(LocalDateTime.of(2021, 10, 21,0,0), 14))
-                .build()));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "223")).thenReturn(Lists.newArrayList(vehicle3));
         //Attempt to adjust delay.
         assertEquals(1000000.0, vehicleController.getValue("Lee Transport", "223", "27-03-2021").getBody().getValue());
         assertEquals(950000.0, vehicleController.getValue("Lee Transport", "223", "27-03-2022").getBody().getValue());
@@ -546,31 +520,32 @@ public class VehicleControllerTest {
         assertEquals(HttpStatus.NO_CONTENT, vehicleController.getValue("Lee Transport", "224", "27-03-2021").getStatusCode());
         assertEquals(HttpStatus.BAD_REQUEST, vehicleController.getValue("Lee Transport", "", "27-03-2021").getStatusCode());
         //Mock a bus.
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "223")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("223")
-                .vehicleType(VehicleType.BUS)
-                .typeSpecificInfos(Collections.singletonMap("registrationNumber", "22-TEST"))
-                .company("Lee Transport")
-                .allocatedTour("1/2")
-                .delayInMinutes(5)
-                .deliveryDate(LocalDateTime.of(2021, 3, 25,0,0))
-                .inspectionDate(LocalDateTime.of(2021, 4, 25,0,0))
-                .timesheet(Map.of(LocalDateTime.of(2021, 10, 21,0,0), 14))
-                .build()));
+        Vehicle vehicle2 = new Vehicle();
+        vehicle2.setLivery("Green with red text");
+        vehicle2.setFleetNumber("223");
+        vehicle2.setAllocatedTour("1/2");
+        vehicle2.setVehicleType(VehicleType.BUS);
+        vehicle2.setTypeSpecificInfos(Collections.singletonMap("registrationNumber", "22-TEST"));
+        vehicle2.setCompany("Lee Transport");
+        vehicle2.setDelayInMinutes(5);
+        vehicle2.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle2.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        vehicle2.setTimesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "223")).thenReturn(Lists.newArrayList(vehicle2));
         assertEquals(180000.0, vehicleController.getValue("Lee Transport", "223", "27-03-2022").getBody().getValue());
         //Mock a tram.
-        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "223")).thenReturn(Lists.newArrayList(Vehicle.builder()
-                .livery("Green with red text")
-                .fleetNumber("223")
-                .vehicleType(VehicleType.TRAM)
-                .company("Lee Transport")
-                .allocatedTour("1/2")
-                .delayInMinutes(5)
-                .deliveryDate(LocalDateTime.of(2021, 3, 25,0,0))
-                .inspectionDate(LocalDateTime.of(2021, 4, 25,0,0))
-                .timesheet(Map.of(LocalDateTime.of(2021, 10, 21,0,0), 14))
-                .build()));
+        Vehicle vehicle = new Vehicle();
+        vehicle.setLivery("Green with red text");
+        vehicle.setFleetNumber("223");
+        vehicle.setAllocatedTour("1/2");
+        vehicle.setVehicleType(VehicleType.TRAM);
+        vehicle.setTypeSpecificInfos(Collections.singletonMap("registrationNumber", "22-TEST"));
+        vehicle.setCompany("Lee Transport");
+        vehicle.setDelayInMinutes(5);
+        vehicle.setDeliveryDate(LocalDateTime.of(2021,3,25,0,0));
+        vehicle.setInspectionDate(LocalDateTime.of(2021,4,25,0,0));
+        vehicle.setTimesheet(Map.of(LocalDateTime.of(2021,10,21,0,0), 14));
+        Mockito.when(vehicleService.retrieveVehiclesByCompanyAndFleetNumber("Lee Transport", "223")).thenReturn(Lists.newArrayList(vehicle));
         assertEquals(665000.0, vehicleController.getValue("Lee Transport", "223", "27-03-2022").getBody().getValue());
     }
 
